--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
+# Follows: https://docs.openmediavault.org/en/latest/installation/on_debian.html
 # tasks file for debian_omv
 # - name: Add openmediavault apt repository source
 #   ansible.builtin.deb822_repository:
@@ -10,17 +11,39 @@
 #     signed_by: https://packages.openmediavault.org/public/archive.key
 #     architectures: "{{ omv_arch }}"
 #     enabled: true
-- name: Install gpg
+- name: Install prerequisites
   ansible.builtin.apt:
-    name: gnupg
+    name:
+      - gnupg
+      - fuse-overlayfs
+      - systemd-resolved
     state: present
     update_cache: true
+
+- name: "Ensure systemd-resolved is started and enabled"
+  ansible.builtin.service:
+    name: systemd-resolved
+    state: started
+    enabled: true
+
+- name: "Systemd-resolved may require a reboot for getting rid of resolveconf"
+  ansible.builtin.reboot:
+    msg: "Rebooting to ensure systemd-resolved is properly configured."
+    pre_reboot_delay: 5
+    post_reboot_delay: 15
+    reboot_timeout: 300
+
+- name: "Configure systemd-resolved for this session"
+  ansible.builtin.command: "resolvectl dns {{ ansible_facts['default_ipv4']['interface'] }} 10.0.0.1"
+  changed_when: false
 
 - name: Add OMV repository to apt sources list
   ansible.builtin.deb822_repository:
     name: openmediavault
     types: [deb]
-    components: main
+    components:
+      - main
+      - partner
     suites: "{{ omv_version }}"
     architectures: "{{ omv_arch }}"
     signed_by: https://packages.openmediavault.org/public/archive.key
@@ -32,26 +55,38 @@
     update_cache: true
     cache_valid_time: 3600
 
-- name: Install openmediavault package
-  ansible.builtin.apt:
-    name: openmediavault
-    install_recommends: false
-    allow_downgrade: true
-    state: present
-    update_cache: true
+# - name: Install openmediavault package
+#   ansible.builtin.apt:
+#     name: openmediavault
+#     install_recommends: false
+#     allow_change_held_packages: true
+#     allow_downgrade: true
+#     state: present
+#     autoremove: true
+#     update_cache: true
 
-# this command is needed to initialize the system
-- name: Configure OMV DB
-  ansible.builtin.command: "/usr/sbin/omv-confdbadm populate"
-  when: omv_first_install
-  changed_when: true
+# # this command is needed to initialize the system
+# - name: Configure OMV DB
+#   ansible.builtin.command: "/usr/sbin/omv-confdbadm populate"
+#   when: omv_first_install
+#   changed_when: true
+# # this command is needed to initialize the system
+# - name: Re-deploy the network configuration via the services used by openmediavault
+#   ansible.builtin.command: "/usr/sbin/omv-salt deploy run systemd-networkd"
+#   when: omv_first_install
+#   changed_when: true
+#
 
-- name: After install, make sure we can still ssh to the machine
-  ansible.builtin.user:
-    name: "{{ item }}"
-    group: _ssh
-  with_items:
-    - ansible
-    - awaal
+# - name: After install, make sure we can still ssh to the machine
+#   ansible.builtin.user:
+#     name: "{{ item }}"
+#     group: _ssh
+#   with_items:
+#     - ansible
+#     - awaal
+
+- name: Tell user our IP address as the final task
+  ansible.builtin.debug:
+    msg: "OMV (admin/openmediavault) should be reachable at http://{{ ansible_facts['default_ipv4']['address'] }}/"
 
 # sudo wget -O - https://github.com/OpenMediaVault-Plugin-Developers/installScript/raw/master/install | sudo bash
